--- a/index.html
+++ b/index.html
@@ -2,3 +2,8 @@
 	<head>
 	</head>
 </html>
+
+INSTALL GIT FROM FLASH
+ 
+lwando: you must delete this mf2,
+		people will think we are ametures more than we are ;)
